# github-meta

./: Cargo.toml  README.md  build.rs  build_types.rs  update-data.sh
.github/: renovate.json5
.github/workflows/: ci.yml  release.yml  update.yml
bump_version/: Cargo.toml
bump_version/src/: main.rs
data/: meta.json  secret-scanning.json
examples/: print.rs
src/: lib.rs
