[package]
name = "github-meta"
version = "0.6.0"
description = "https://api.github.com/meta as const structs"
license = "MIT/Apache-2.0"
repository = "https://github.com/Turbo87/github-meta"
keywords = ["github"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["bump_version"]

[build-dependencies]
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
